[gd_scene load_steps=5 format=3 uid="uid://d2d3tkyxa5fvi"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_556bn"]
[ext_resource type="Texture2D" uid="uid://ogvyaqni6heo" path="res://Player/Ship/Sprites/idle.png" id="2_u0yb7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_weoh7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_u0yb7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r4gmy"]
radius = 33.0
height = 90.0

[node name="Player" type="Area2D"]
script = ExtResource("1_556bn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_weoh7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_r4gmy")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
